Fixed the issue of the website navigation header moving off screen when window height is adjusted.

--- a/client/src/components/styles/WebNavHeader.css
+++ b/client/src/components/styles/WebNavHeader.css
@@ -1,5 +1,5 @@
 .navContainer {
-  height: 20%;
+  float: inline-start;
   width: 100%;
   background-color: #412804;
   display: flex;
