--- a/client/src/pages/styles/Home.css
+++ b/client/src/pages/styles/Home.css
@@ -1,5 +1,4 @@
 .homePage {
-  position: absolute;
   height: 100%;
   width: 100%;
 }
